--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button id="playAudioButton" style="margin-top: 20px;" tabindex="0">Play Background Music</button>
     </div>
 
-    <audio id="background-audio" src="dhadkan.mp3" loop preload="auto"></audio> <!-- Added preload attribute -->
+    <audio id="background-audio" src="H.mp3" loop preload="auto"></audio> <!-- Added preload attribute -->
 
     <script>
         document.getElementById('playAudioButton').addEventListener('click', function() {
@@ -84,8 +84,8 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             
-            const correctUsername = 'admin';
-            const correctPassword = 'password123';
+            const correctUsername = 'Nowshin&Nabil';
+            const correctPassword = 'Best@friends';
 
             if (username === correctUsername && password === correctPassword) {
                 console.log('Redirecting to the desired URL...');
