--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             
-            const correctUsername = 'Nowshin&Nabil';
-            const correctPassword = 'Best@friends';
+            const correctUsername = 'admin';
+            const correctPassword = 'password123';
 
             if (username === correctUsername && password === correctPassword) {
                 console.log('Redirecting to the desired URL...');
